--- a/pom.xml
+++ b/pom.xml
@@ -29,18 +29,14 @@
     <packaging>pom</packaging>
     <name>WSO2 Carbon Extension - Mobile Connect Pom</name>
     <url>http://wso2.org</url>
-    <profiles>
-        <profile>
-            <id>default</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <modules>
-                <module>component/authenticator</module>
-                <module>feature</module>
-            </modules>
-        </profile>
-    </profiles>
+
+    <scm>
+        <url>https://github.com/wso2-extensions/identity-outbound-auth-oidc-mobileconnect.git</url>
+        <developerConnection>scm:https://github.com/wso2-extensions/identity-outbound-auth-oidc-mobileconnect.git</developerConnection>
+        <connection>scm:git:https://github.com/wso2-extensions/identity-outbound-auth-oidc-mobileconnect.git</connection>
+        <tag>HEAD</tag>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>org.wso2.carbon.identity</groupId>
@@ -274,6 +270,7 @@
             </plugins>
         </pluginManagement>
     </build>
+
     <pluginRepositories>
         <pluginRepository>
             <id>wso2.releases</id>
@@ -308,6 +305,7 @@
             </releases>
         </pluginRepository>
     </pluginRepositories>
+
     <repositories>
         <repository>
             <id>wso2-nexus</id>
@@ -342,6 +340,7 @@
             </releases>
         </repository>
     </repositories>
+
     <distributionManagement>
         <repository>
             <id>nexus-releases</id>
@@ -354,6 +353,12 @@
             <url>http://maven.wso2.org/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
+
+    <modules>
+        <module>component/authenticator</module>
+        <module>feature/org.wso2.carbon.identity.authenticator.mobileconnect.server.feature</module>
+    </modules>
+
     <properties>
         <carbon.identity.version>5.0.7</carbon.identity.version>
         <commons-logging.version>4.4.3</commons-logging.version>
@@ -370,5 +375,40 @@
         <commons-lang.wso2.version>2.6.0.wso2v1</commons-lang.wso2.version>
         <encoder.wso2.version>1.2.0.wso2v1</encoder.wso2.version>
         <axis2.wso2.version>1.6.1.wso2v16</axis2.wso2.version>
+
+        <!--Carbon framework version-->
+        <carbon.identity.framework.version>5.5.0</carbon.identity.framework.version>
+        <identity.outbound.auth.facebook.export.version>${project.version}</identity.outbound.auth.facebook.export.version>
+        <carbon.identity.framework.import.version.range>[5.0.0, 6.0.0)</carbon.identity.framework.import.version.range>
+
+        <identity.outbound.auth.oidc.version>5.1.3</identity.outbound.auth.oidc.version>
+        <identity.outbound.auth.oidc.import.version.range>[5.0.0, 6.0.0)</identity.outbound.auth.oidc.import.version.range>
+
+        <!-- Carbon kernel version -->
+        <carbon.kernel.version>4.4.7</carbon.kernel.version>
+        <carbon.kernel.package.import.version.range>[4.4.0, 5.0.0)</carbon.kernel.package.import.version.range>
+        <carbon.kernel.registry.imp.pkg.version>[1.0.1, 2.0.0)</carbon.kernel.registry.imp.pkg.version>
+
+        <osgi.service.component.imp.pkg.version.range>[1.2.0, 2.0.0)</osgi.service.component.imp.pkg.version.range>
+        <osgi.framework.imp.pkg.version.range>[1.7.0, 2.0.0)</osgi.framework.imp.pkg.version.range>
+
+        <!-- Servlet API -->
+        <imp.pkg.version.javax.servlet>[2.6.0, 3.0.0)</imp.pkg.version.javax.servlet>
+
+        <!-- Commons -->
+        <commons-lang.wso2.osgi.version.range>[2.6.0,3.0.0)</commons-lang.wso2.osgi.version.range>
+        <commons-logging.osgi.version.range>[1.2,2.0)</commons-logging.osgi.version.range>
+        <commons-codec.wso2.osgi.version.range>[1.4.0,2.0.0)</commons-codec.wso2.osgi.version.range>
+
+        <org.slf4j.verison>1.6.1</org.slf4j.verison>
+        <oltu.version>1.0.0.wso2v3</oltu.version>
+        <oltu.package.import.version.range>[1.0.0, 2.0.0)</oltu.package.import.version.range>
+        <json.wso2.version>3.0.0.wso2v1</json.wso2.version>
+
+        <maven.buildnumber.plugin.version>1.4</maven.buildnumber.plugin.version>
+        <maven.scr.plugin.version>1.7.2</maven.scr.plugin.version>
+        <maven.bundle.plugin.version>2.4.0</maven.bundle.plugin.version>
+        <maven.compiler.plugin.version>2.3.1</maven.compiler.plugin.version>
+        <carbon.p2.plugin.version>1.5.3</carbon.p2.plugin.version>
     </properties>
 </project>
