--- a/component/authentication-endpoint/pom.xml
+++ b/component/authentication-endpoint/pom.xml
@@ -21,12 +21,12 @@
     <parent>
         <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
         <artifactId>org.wso2.carbon.extension.identity.authenticator.mobileconnect</artifactId>
-        <version>1.0.6-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>org.wso2.carbon.extension.identity.authenticator.mobileconnect.endpoint</artifactId>
-    <version>2.0.5-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>WSO2 Carbon - Identity Application Authentication Mobile Connect Endpoint</name>
     <description>Identity Application Authentication Mobile Connect Endpoint</description>
@@ -47,11 +47,11 @@
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
-                <version>2.3.2</version>
+                <version>${maven.compiler.plugin.version}</version>
             </plugin>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.2</version>
+                <version>${maven.war.plugin.version}</version>
                 <configuration>
                     <webResources>
                         <resource>
