--- a/component/authenticator/pom.xml
+++ b/component/authenticator/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
         <artifactId>org.wso2.carbon.extension.identity.authenticator.mobileconnect</artifactId>
-        <version>1.0.6-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>org.wso2.carbon.extension.identity.authenticator.mobileconnect.connector</artifactId>
@@ -35,12 +35,12 @@
         <dependency>
             <groupId>org.codehaus.jettison</groupId>
             <artifactId>jettison</artifactId>
-            <version>1.2</version>
+            <version>${org.codehaus.jettison.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.orbit.org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.3.1.wso2v2</version>
+            <version>${org.wso2.orbit.org.apache.httpcomponents.version}</version>
         </dependency>
     </dependencies>
 
@@ -50,7 +50,7 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>2.3.5</version>
+                    <version>${maven.org.apache.felix.bundle.plugin}</version>
                     <extensions>true</extensions>
                 </plugin>
             </plugins>
@@ -59,7 +59,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.0</version>
+                <version>${org.apache.maven.plugins}</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
@@ -94,7 +94,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-scr-plugin</artifactId>
-                <version>1.7.2</version>
+                <version>${maven.org.apache.felix.src.plugin}</version>
                 <executions>
                     <execution>
                         <id>generate-scr-scrdescriptor</id>
