--- a/feature/org.wso2.carbon.identity.authenticator.mobileconnect.server.feature/pom.xml
+++ b/feature/org.wso2.carbon.identity.authenticator.mobileconnect.server.feature/pom.xml
@@ -22,7 +22,7 @@
         <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
         <artifactId>org.wso2.carbon.extension.identity.authenticator.mobileconnect</artifactId>
         <relativePath>../../pom.xml</relativePath>
-        <version>1.0.6-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>org.wso2.carbon.extension.identity.authenticator.mobileconnect.server.feature</artifactId>
@@ -42,7 +42,7 @@
             <plugin>
                 <groupId>org.wso2.maven</groupId>
                 <artifactId>carbon-p2-plugin</artifactId>
-                <version>1.5.3</version>
+                <version>${carbon.p2.plugin.version}</version>
                 <executions>
                     <execution>
                         <id>4-p2-feature-generation</id>
