--- a/component/authenticator/pom.xml
+++ b/component/authenticator/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
         <artifactId>org.wso2.carbon.extension.identity.authenticator.mobileconnect</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.1-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>org.wso2.carbon.extension.identity.authenticator.mobileconnect.connector</artifactId>
@@ -29,7 +29,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.wso2.carbon.identity.outbound.auth.oidc</groupId>
+            <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.application.authenticator.oidc</artifactId>
         </dependency>
         <dependency>
