--- a/pom.xml
+++ b/pom.xml
@@ -306,6 +306,25 @@
                     <artifactId>maven-project-info-reports-plugin</artifactId>
                     <version>${maven.project.info.reports.plugin.version}</version>
                 </plugin>
+	    	<plugin>
+                   <groupId>org.apache.maven.plugins</groupId>
+                   <artifactId>maven-javadoc-plugin</artifactId>
+                   <configuration>
+                       <source>1.8</source>
+                   </configuration>
+                   <executions>
+                       <execution>
+                           <id>attach-javadocs</id>
+                           <goals>
+                               <goal>jar</goal>
+                           </goals>
+                           <configuration>
+                               <!--This parameter disables doclint-->
+                               <doclint>none</doclint>
+                           </configuration>
+                       </execution>
+                   </executions>
+               </plugin> 
             </plugins>
         </pluginManagement>
     </build>
